# tipe2026

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES  csv_to_json.py  main.cpp  rapport.py  task.json  taskDefault.json
include/: brain.h  brain.hpp  client.h  client.hpp  creature.h  creature.hpp  displayservice.h  displayservice.hpp  filemanager.h  filemanager.hpp  physics.h  physics.hpp  reproduction.h  reproduction.hpp  save.h  server.h  server.hpp  threadsmg.h  threadsmg.hpp
src/: brain.cpp  client.cpp  creature.cpp  displayservice.cpp  displayservice_headless.cpp  filemanager.cpp  main.cpp  physics.cpp  reproduction.cpp  save.cpp  server.cpp  threadsmg.cpp
tools/: csv_to_json.py  rapport.py  stats.py
